Connection to the database

--- a/service-users-server/src/main/resources/application.properties
+++ b/service-users-server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.contextPath=/api
 server.port=8080
 spring.jackson.date-format=io.pestakit.users.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.datasource.url= jdbc:postgresql://localhost:26257/users-service
+spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto=create-drop
