--- a/service-users-server/pom.xml
+++ b/service-users-server/pom.xml
@@ -103,6 +103,11 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.1.4</version>
+        </dependency>
     <!-- Bean Validation API support -->
     <dependency>
         <groupId>javax.validation</groupId>
