--- a/service-users-server/src/main/resources/api-spec.yaml
+++ b/service-users-server/src/main/resources/api-spec.yaml
@@ -81,6 +81,8 @@ definitions:
         type: string
       weight:
         type: string
+      claude:
+        type: string
   User:
     type: object
     properties:
