--- a/service-users-specs/src/main/resources/api-spec.yaml
+++ b/service-users-specs/src/main/resources/api-spec.yaml
@@ -57,6 +57,12 @@ paths:
     get:
       description: get the list of all users
       operationId: getUsers
+      parameters:
+      - name: id
+        in: path
+        type: long
+        description: user id
+        required: true
       produces:
         - application/json
       responses:
@@ -66,6 +72,21 @@ paths:
             type: array
             items:
               $ref: '#/definitions/User'
+
+  /user/{id}:
+    get:
+      description: get a specific User
+      operationId: getUser
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: success
+          schema:
+            type: object
+            items:
+              $ref: '#/definitions/User'
+
 
 
 
