Modify path to user id

--- a/service-users-specs/src/main/resources/api-spec.yaml
+++ b/service-users-specs/src/main/resources/api-spec.yaml
@@ -73,19 +73,21 @@ paths:
             items:
               $ref: '#/definitions/User'
 
-  /user/{id}:
-    get:
-      description: get a specific User
-      operationId: getUser
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: success
-          schema:
-            type: object
-            items:
-              $ref: '#/definitions/User'
+    '/users/{id}':
+      get:
+        description: get a specific User
+        operationId: getUser
+        produces:
+          - application/json
+        responses:
+          '200':
+            description: success
+            schema:
+              type: object
+              items:
+                $ref: '#/definitions/User'
+          '404':
+            description: not found
 
 
 
