--- a/service-users-specs/src/main/resources/api-spec.yaml
+++ b/service-users-specs/src/main/resources/api-spec.yaml
@@ -57,12 +57,6 @@ paths:
     get:
       description: get the list of all users
       operationId: getUsers
-      parameters:
-      - name: id
-        in: path
-        type: long
-        description: user id
-        required: true
       produces:
         - application/json
       responses:
@@ -73,23 +67,26 @@ paths:
             items:
               $ref: '#/definitions/User'
 
-    '/users/{id}':
-      get:
-        description: get a specific User
-        operationId: getUser
-        produces:
-          - application/json
-        responses:
-          '200':
-            description: success
-            schema:
-              type: object
-              items:
-                $ref: '#/definitions/User'
-          '404':
-            description: not found
-
-
+  /users/{userID}:
+    get:
+      description: get a specific User
+      operationId: getUser
+      parameters:
+        - in: path
+          name: userID
+          type: integer
+          format: int64
+          required: true
+          description: Get the user according its id
+      produces:
+        - application/json
+      items:
+        $ref: '#/definitions/User'
+      responses:
+        '200':
+          description: success
+          schema:
+            $ref: '#/definitions/User'
 
 
 definitions:
