Add search user by username

--- a/service-users-specs/src/main/resources/api-spec.yaml
+++ b/service-users-specs/src/main/resources/api-spec.yaml
@@ -59,6 +59,26 @@ paths:
           schema:
             $ref: '#/definitions/User'
 
+  /users/{username}:
+    get:
+      description: get a specific User with his username
+      operationId: getUser
+      parameters:
+        - name: username
+          in: path
+          type: string
+          required: true
+          description: user's id
+          schema:
+            type: string
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: success
+          schema:
+            $ref: '#/definitions/User'
+
 
 definitions:
   User:
