Hash password before saving into db Fixes #10

--- a/service-users-server/pom.xml
+++ b/service-users-server/pom.xml
@@ -108,5 +108,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 </project>
