--- a/service-users-server/pom.xml
+++ b/service-users-server/pom.xml
@@ -113,5 +113,10 @@
             <artifactId>argon2-jvm</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 </project>
