--- a/service-users-server/pom.xml
+++ b/service-users-server/pom.xml
@@ -118,5 +118,15 @@
             <artifactId>argon2-jvm</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>1.46</version>
+        </dependency>
     </dependencies>
 </project>
