--- a/service-users-specs/pom.xml
+++ b/service-users-specs/pom.xml
@@ -110,7 +110,11 @@
       <artifactId>gson</artifactId>
       <version>${gson-version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>de.mkammerer</groupId>
+      <artifactId>argon2-jvm</artifactId>
+      <version>2.2</version>
+    </dependency>
             
     <dependency>
       <groupId>joda-time</groupId>
