--- a/service-users-specs/src/main/resources/api-spec.yaml
+++ b/service-users-specs/src/main/resources/api-spec.yaml
@@ -139,12 +139,12 @@ paths:
       description: get the public key
       operationId: getPublicKey
       produces:
-        - application/json
+        - text/plain
       responses:
         '200':
           description: success
           schema:
-            $ref: '#/definitions/PublicKey'
+            type: string
 
 
 definitions:
@@ -217,21 +217,6 @@ definitions:
     required:
         - identifier
         - password
-
-  PublicKey:
-    type: object
-    properties:
-      key:
-        type: string
-        description: "public key"
-      dateCreation:
-        type: string
-        format: date
-        description: "date of creation"
-      dateExpiration:
-        type: string
-        format: date
-        description: "date of expiration"
 
   Token:
       type: object
