--- a/service-users-server/pom.xml
+++ b/service-users-server/pom.xml
@@ -1,21 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <groupId>io.pestakit</groupId>
+        <artifactId>microserve-users</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.pestakit</groupId>
-    <artifactId>microserve-users</artifactId>
+
+    <artifactId>users-server</artifactId>
+
     <packaging>jar</packaging>
     <name>swagger-spring</name>
-    <version>1.0.0</version>
     <properties>
         <java.version>1.7</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <springfox-version>2.6.1</springfox-version>
     </properties>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.4.RELEASE</version>
-    </parent>
+
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
