--- a/service-users-specs/pom.xml
+++ b/service-users-specs/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>io.pestakit</groupId>
   <artifactId>usersSpecification</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -17,6 +16,11 @@
     <gson-version>2.6.2</gson-version>
     <io.pestakit.users.server.url>http://localhost:8080/api/</io.pestakit.users.server.url>
   </properties>
+  <parent>
+    <groupId>io.pestakit</groupId>
+    <artifactId>microserve-users</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <build>
     <testResources>
       <testResource>
@@ -35,7 +39,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <inputSpec>src/main/resources/api-spec.yaml</inputSpec>
+              <inputSpec>${basedir}/src/main/resources/api-spec.yaml</inputSpec>
               <language>java</language>
               <!--
               <library>jersey2</library>
