misc jenkins fix

--- a/service-users-server/pom.xml
+++ b/service-users-server/pom.xml
@@ -26,7 +26,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <fork>false</fork>
+                    <fork>true</fork>
                 </configuration>
                 <executions>
                     <execution>
