--- a/service-users-specs/pom.xml
+++ b/service-users-specs/pom.xml
@@ -141,7 +141,8 @@
     <dependency>
       <groupId>io.pestakit</groupId>
       <artifactId>microserve-users</artifactId>
-      <version>1.0.0</version>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
