--- a/service-users-specs/pom.xml
+++ b/service-users-specs/pom.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>io.pestakit</groupId>
+    <artifactId>microserve-users</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>usersSpecification</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -16,11 +21,7 @@
     <gson-version>2.6.2</gson-version>
     <io.pestakit.users.server.url>http://localhost:8080/api/</io.pestakit.users.server.url>
   </properties>
-  <parent>
-    <groupId>io.pestakit</groupId>
-    <artifactId>microserve-users</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+
   <build>
     <testResources>
       <testResource>
@@ -140,7 +141,7 @@
     </dependency>
     <dependency>
       <groupId>io.pestakit</groupId>
-      <artifactId>microserve-users</artifactId>
+      <artifactId>users-server</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
