--- a/service-users-server/src/main/resources/application.properties
+++ b/service-users-server/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.datasource.url= jdbc:postgresql://localhost:26257/users-service
 spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=create-drop
+hibernate.temp.use_jdbc_metadata_defaults=false
