--- a/service-users-server/pom.xml
+++ b/service-users-server/pom.xml
@@ -25,6 +25,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <fork>true</fork>
+                    <wait>5000</wait>
                 </configuration>
                 <executions>
                     <execution>
